--- a/.gitignore
+++ b/.gitignore
@@ -22,5 +22,12 @@ Thumbs.db
 # compiled output
 /dist
 /node_modules
-/lambda/presigned-url-generator/dist
-/lambda/presigned-url-generator/node_modules
+/lambda/*/dist
+/lambda/*/node_modules
+
+# Exclude all .tfvars files, which are likely to contain sensitive data, such as
+# password, private keys, and other secrets. These should not be part of version 
+# control as they are data points which are potentially sensitive and subject 
+# to change depending on the environment.
+*.tfvars
+*.tfvars.json
