--- a/package.json
+++ b/package.json
@@ -4,10 +4,9 @@
   "scripts": {
     "build-lambda-handlers": "npm run build:presigned-url-generator",
     "build:presigned-url-generator": "cd lambda/presigned-url-generator && npm install && npm run build",
-    "terraform:init": "cd terraform && terraform init",
-    "terraform:apply": "cd terraform && terraform apply",
-    "terraform:destroy": "cd terraform && terraform destroy",
-    "deploy": "npm run build-lambda-handlers && npm run terraform:apply",
-    "destroy": "npm run terraform:destroy"
+    "deploy:dev": "./scripts/deploy.sh dev",
+    "deploy:prod": "./scripts/deploy.sh prod",
+    "destroy:dev": "./scripts/destroy.sh dev",
+    "destroy:prod": "./scripts/destroy.sh prod"
   }
 }
