--- a/lambda/sqs-message-processor/package.json
+++ b/lambda/sqs-message-processor/package.json
@@ -8,6 +8,7 @@
     "prepare": "npm run build"
   },
   "dependencies": {
+    "@aws-sdk/client-dynamodb": "^3.584.0",
     "@aws-sdk/client-s3": "^3.576.0",
     "@aws-sdk/client-sqs": "^3.583.0",
     "@aws-sdk/s3-request-presigner": "^3.576.0"
