--- a/lambda/get-single-image/package.json
+++ b/lambda/get-single-image/package.json
@@ -10,13 +10,11 @@
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.584.0",
     "@aws-sdk/client-s3": "^3.576.0",
-    "@aws-sdk/client-sqs": "^3.583.0",
-    "@aws-sdk/s3-request-presigner": "^3.576.0",
-    "uuid": "^9.0.1"
+    "@aws-sdk/s3-request-presigner": "^3.576.0"
   },
   "devDependencies": {
     "@types/aws-lambda": "^8.10.92",
     "@types/node": "^20.14.2",
-    "typescript": "^5.0.0"
+    "typescript": "^5.4.5"
   }
 }
