--- a/lambda/shared/package.json
+++ b/lambda/shared/package.json
@@ -1,16 +1,13 @@
 {
-  "name": "s3-upload-processor",
+  "name": "shared-dependencies",
   "version": "1.0.0",
-  "description": "Lambda for process image upload",
   "main": "dist/index.js",
+  "dependencies": {
+    "aws-lambda": "^1.0.7"
+  },
   "scripts": {
     "build": "tsc",
     "prepare": "npm run build"
-  },
-  "dependencies": {
-    "@aws-sdk/client-s3": "^3.576.0",
-    "@aws-sdk/client-sqs": "^3.583.0",
-    "@aws-sdk/s3-request-presigner": "^3.576.0"
   },
   "devDependencies": {
     "@types/aws-lambda": "^8.10.92",
