--- a/lambda/presigned-url-generator/package.json
+++ b/lambda/presigned-url-generator/package.json
@@ -4,7 +4,7 @@
   "description": "Lambda for getting presigned-url",
   "main": "dist/index.js",
   "scripts": {
-    "build": "tsc",
+    "build": "node esbuild.config.js",
     "prepare": "npm run build"
   },
   "dependencies": {
@@ -14,6 +14,7 @@
   "devDependencies": {
     "@types/aws-lambda": "^8.10.92",
     "@types/node": "^20.12.12",
-    "typescript": "^5.4.5"
+    "typescript": "^5.4.5",
+    "esbuild": "^0.21.5"
   }
 }
