--- a/lambda/photo-api-authorizer/package.json
+++ b/lambda/photo-api-authorizer/package.json
@@ -7,11 +7,7 @@
     "build": "node esbuild.config.js",
     "prepare": "npm run build"
   },
-  "dependencies": {
-    "@aws-sdk/client-dynamodb": "^3.592.0",
-    "@aws-sdk/client-sns": "^3.592.0",
-    "@aws-sdk/util-dynamodb": "^3.592.0"
-  },
+  "dependencies": {},
   "devDependencies": {
     "@types/aws-lambda": "^8.10.92",
     "@types/node": "^20.12.12",
