--- a/lambda/sqs-message-processor/package.json
+++ b/lambda/sqs-message-processor/package.json
@@ -10,14 +10,14 @@
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.584.0",
     "@aws-sdk/client-s3": "^3.576.0",
+    "@aws-sdk/client-sfn": "^3.616.0",
     "@aws-sdk/client-sqs": "^3.583.0",
-    "@aws-sdk/lib-dynamodb": "^3.592.0",
     "@aws-sdk/s3-request-presigner": "^3.576.0"
   },
   "devDependencies": {
     "@types/aws-lambda": "^8.10.92",
     "@types/node": "^20.12.12",
-    "typescript": "^5.4.5",
-    "esbuild": "^0.21.5"
+    "esbuild": "^0.21.5",
+    "typescript": "^5.4.5"
   }
 }
